# doc-search

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: main.rs
test_data/: sample.odt
